@@ -14,6 +14,12 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.1.0\...HEAD[Unreleased]
+
+=== Changed
+
+* Change to create output file before compression ({pull-request-url}/5[#5])
+
 == {project-url}/releases/tag/v0.1.0[0.1.0] - 2024-07-22
 
 === Added
